--- a/src/mlnn/convolution/CMakeLists.txt
+++ b/src/mlnn/convolution/CMakeLists.txt
@@ -2,17 +2,17 @@
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 # =======================================================================
-# Build linear layer tests
+# Build convolution layer tests
 # =======================================================================
 
 # Link tests with GTest
 if(GTEST_FOUND AND BUILD_UNIT_TESTS)
 
-	add_executable(linearTestsRunner Linear_tests.cpp)
-	target_link_libraries(linearTestsRunner ${GTEST_LIBRARIES})
+	add_executable(convolutionTestsRunner Convolution_tests.cpp)
+	target_link_libraries(convolutionTestsRunner ${GTEST_LIBRARIES})
 	if(OpenBLAS_FOUND)
-		target_link_libraries(linearTestsRunner  ${OpenBLAS_LIB} )
+		target_link_libraries(convolutionTestsRunner  ${OpenBLAS_LIB} )
 	endif(OpenBLAS_FOUND)
-	add_test(linearTestsRunner ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/linearTestsRunner)
+	add_test(convolutionTestsRunner ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/convolutionTestsRunner)
 
 endif(GTEST_FOUND AND BUILD_UNIT_TESTS)
