Convolution convergence and numerical grandient testing

--- a/src/mlnn/convolution/CMakeLists.txt
+++ b/src/mlnn/convolution/CMakeLists.txt
@@ -8,7 +8,10 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 # Link tests with GTest
 if(GTEST_FOUND AND BUILD_UNIT_TESTS)
 
-	add_executable(convolutionTestsRunner Convolution_tests.cpp)
+	add_executable(convolutionTestsRunner
+		Convolution_tests.cpp
+		Convolution_convergence_tests.cpp
+		)
 	target_link_libraries(convolutionTestsRunner ${GTEST_LIBRARIES})
 	if(OpenBLAS_FOUND)
 		target_link_libraries(convolutionTestsRunner  ${OpenBLAS_LIB} )
