--- a/src/mlnn/fully_connected/CMakeLists.txt
+++ b/src/mlnn/fully_connected/CMakeLists.txt
@@ -9,7 +9,7 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 if(GTEST_FOUND AND BUILD_UNIT_TESTS)
 
 	add_executable(linearTestsRunner Linear_tests.cpp)
-	target_link_libraries(linearTestsRunner ${GTEST_LIBRARIES})
+	target_link_libraries(linearTestsRunner logger ${Boost_LIBRARIES} ${GTEST_LIBRARIES})
 	if(OpenBLAS_FOUND)
 		target_link_libraries(linearTestsRunner  ${OpenBLAS_LIB} )
 	endif(OpenBLAS_FOUND)
