--- a/src/optimization/CMakeLists.txt
+++ b/src/optimization/CMakeLists.txt
@@ -13,6 +13,7 @@ install(FILES
 	OptimizationFunctionTypes.hpp
 	HebbianRule.hpp
 	NormalizedHebbianRule.hpp
+	NormalizedZerosumHebbianRule.hpp
 	BinaryCorrelatorLearningRule.hpp
 	DESTINATION include/optimization)
 
