Refactored all WindowBatch dependent apps, added linking with OpenGL and GLUT to cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,25 @@ include_directories(SYSTEM ${Boost_INCLUDE_DIR})
 find_package( Eigen3 REQUIRED )
 include_directories( ${EIGEN3_INCLUDE_DIR} )
 
+# Find GLUT package
+find_package(GLUT REQUIRED)
+include_directories(${GLUT_INCLUDE_DIRS})
+link_directories(${GLUT_LIBRARY_DIRS})
+add_definitions(${GLUT_DEFINITIONS})
+if(NOT GLUT_FOUND)
+    message(ERROR " GLUT not found!")
+endif(NOT GLUT_FOUND)
+
+# Find OPENGL package
+find_package(OpenGL REQUIRED)
+if(NOT OPENGL_FOUND)
+    message(ERROR " OPENGL not found!")
+elsif(NOT OPENGL_FOUND)
+	include_directories(${OpenGL_INCLUDE_DIRS})
+	link_directories(${OpenGL_LIBRARY_DIRS})
+	add_definitions(${OpenGL_DEFINITIONS})
+endif(NOT OPENGL_FOUND)
+
 # Find MIC Toolchain
 find_package(MIToolchain 1.1 REQUIRED)
 
@@ -42,7 +61,7 @@ find_package(MIToolchain 1.1 REQUIRED)
 find_package(MIAlgorithms 1.2 REQUIRED)
 
 # Find MIC Visualization
-find_package(MIVisualization 1.2 REQUIRED)
+find_package(MIVisualization 1.2.1 REQUIRED)
 
 # =======================================================================
 # Find optional packages
