mi-algorithms reorganization fixes

--- a/src/application/CMakeLists.txt
+++ b/src/application/CMakeLists.txt
@@ -27,7 +27,7 @@ if(${BUILD_APP_MNIST_PATCH_RECONSTRUCTION})
 		configuration
 		application
 		data_utils
-		data_io
+		importers
 		opengl_visualization
 		opengl_application
 		${OPENGL_LIBRARIES}
@@ -62,7 +62,7 @@ if(${BUILD_APP_MNIST_PATCH_SOFTMAX})
 		configuration
 		application
 		data_utils
-		data_io
+		importers
 		encoders
 		opengl_visualization
 		opengl_application
