--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -28,7 +28,7 @@ if(${BUILD_TEST_SAMPLE_TRAINING_MLNN})
 	target_link_libraries(mlnn_sample_training_test 
 	    logger
 		configuration
-		data_io
+		importers
 		${Boost_LIBRARIES}
 		)
 	if(OpenBLAS_FOUND)
@@ -54,7 +54,7 @@ if(${BUILD_TEST_BATCH_TRAINING_MLNN})
 	target_link_libraries(mlnn_batch_training_test 
 	    logger
 		configuration
-		data_io
+		importers
 		encoders
 		${Boost_LIBRARIES}
 		)
@@ -82,7 +82,7 @@ if(${BUILD_MNIST_CNN_APP})
 			logger
 			application
 			configuration
-			data_io
+			importers
 			encoders
 			configuration
 			opengl_visualization
@@ -114,7 +114,7 @@ if(${BUILD_MNIST_MLNN_APP})
         target_link_libraries(mnist_simple_mlnn_app
 			logger
     		configuration
-			data_io
+			importers
 			encoders
 	        ${Boost_LIBRARIES}
 	        )
@@ -141,7 +141,7 @@ if(${BUILD_TEST_MNIST_BATCH_VISUALIZATION})
 	target_link_libraries(mnist_batch_visualization_test 
 		logger
 		application
-		data_io
+		importers
 		encoders
 		configuration
 		opengl_visualization
@@ -172,7 +172,7 @@ if(${BUILD_TEST_MNIST_MLNN_FEATURES_VISUALIZATION})
 	target_link_libraries(mnist_mlnn_features_visualization_test 
 		logger
 		application
-		data_io
+		importers
 		encoders
 		configuration
 		opengl_visualization
@@ -204,7 +204,7 @@ if(${BUILD_TEST_MNIST_HEBBIAN_FEATURES_VISUALIZATION})
 	target_link_libraries(mnist_hebbian_features_visualization_test 
 		logger
 		application
-		data_io
+		importers
 		encoders
 		configuration
 		opengl_visualization
@@ -235,7 +235,7 @@ if(${BUILD_MNIST_CONVHEBBIAN_APP})
         target_link_libraries(mnist_conv_hebbian
                     logger
                     application
-                    data_io
+                    importers
                     encoders
                     configuration
                     opengl_visualization
